partial review for interval op support
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements430@2528 d91eb1b3-1215-0410-9718-d41490442091